--- a/index.html
+++ b/index.html
@@ -4,7 +4,77 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml" />
+    <!-- - custom css link -->
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <!-- - google font link-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&family=Source+Sans+Pro:wght@600;700&display=swap"
+      rel="stylesheet"
+    />
     <title>Desinic - Get Best UI Design</title>
   </head>
-  <body></body>
+  <body>
+    <!-- - #HEADER -->
+    <header class="header" data-header>
+      <div class="container">
+        <div class="overlay" data-overlay></div>
+
+        <a href="#">
+          <h1 class="logo">Desinic</h1>
+        </a>
+
+        <nav class="navbar" data-navbar>
+          <div class="navbar-top">
+            <a href="#" class="logo">Desinic</a>
+            <button
+              class="nav-close-btn"
+              aria-label="Close Menu"
+              data-nav-close-btn
+            >
+              <ion-icon name="close-outline"></ion-icon>
+            </button>
+          </div>
+
+          <ul class="navbar-list">
+            <li class="navbar-item">
+              <a href="#home" class="navbar-link" data-navbar-link>Home</a>
+            </li>
+            <li class="navbar-item">
+              <a href="#about" class="navbar-link" data-navbar-link>About</a>
+            </li>
+            <li class="navbar-item">
+              <a href="#services" class="navbar-link" data-navbar-link
+                >Services</a
+              >
+            </li>
+            <li class="navbar-item">
+              <a href="#features" class="navbar-link" data-navbar-link
+                >Features</a
+              >
+            </li>
+            <li class="navbar-item">
+              <a href="#blog" class="navbar-link" data-navbar-link>Blog</a>
+            </li>
+            <li class="navbar-item">
+              <a href="#" class="navbar-link" data-navbar-link>Contact Us</a>
+            </li>
+          </ul>
+        </nav>
+
+        <a href="#" class="btn">
+          <ion-icon
+            name="chevron-forward-outline"
+            aria-hidden="true"
+          ></ion-icon>
+          <span>Get A Quote</span>
+        </a>
+
+        <button class="nav-open-btn" aria-label="Open Menu" data-nav-open-btn>
+          <ion-icon name="menu-outline"></ion-icon>
+        </button>
+      </div>
+    </header>
+  </body>
 </html>
