--- a/index.html
+++ b/index.html
@@ -76,5 +76,50 @@
         </button>
       </div>
     </header>
+
+    <main>
+      <article>
+        <!-- - #HERO -->
+        <section class="hero" id="home">
+          <div class="container">
+            <div class="hero-content">
+              <p class="hero-subtitle">We Are Product Designer From UK</p>
+              <h2 class="h2 hero-title">
+                We Design Interfaces That Users Love
+              </h2>
+              <p class="hero-text">
+                Morbi sed lacus nec risus finibus feugiat et fermentum nibh.
+                Pellentesque vitae ante at elit fringilla ac at purus.
+              </p>
+              <button class="btn">Learn More</button>
+            </div>
+
+            <figure class="hero-banner">
+              <img
+                src="./assets/images/hero-banner.png"
+                width="694"
+                height="529"
+                loading="lazy"
+                alt="hero-banner"
+                class="w-100 banner-animation"
+              />
+            </figure>
+          </div>
+        </section>
+      </article>
+    </main>
+
+    <!-- - custom js link -->
+    <script src="./assets/js/script.js"></script>
+
+    <!-- - ionicon link-->
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
   </body>
 </html>
