Navbar toggle & Go top btn

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     />
     <title>Desinic - Get Best UI Design</title>
   </head>
-  <body>
+  <body id="top">
     <!-- - #HEADER -->
     <header class="header" data-header>
       <div class="container">
@@ -685,6 +685,11 @@
         </p>
       </div>
     </footer>
+
+    <!-- - #GO TO TOP -->
+    <a href="#top" class="go-top active" aria-label="Go To Top" data-go-top>
+      <ion-icon name="arrow-up-outline"></ion-icon>
+    </a>
 
     <!-- - custom js link -->
     <script src="./assets/js/script.js"></script>
