--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@
 
       <div class="footer-bottom">
         <p class="copyright">
-          &copy; 2024
+          &copy; <span class="copyright-year">2024</span>
           <a
             href="https://github.com/billalben"
             target="_blank"
