--- a/index.html
+++ b/index.html
@@ -687,7 +687,7 @@
     </footer>
 
     <!-- - #GO TO TOP -->
-    <a href="#top" class="go-top active" aria-label="Go To Top" data-go-top>
+    <a href="#top" class="go-top" aria-label="Go To Top" data-go-top>
       <ion-icon name="arrow-up-outline"></ion-icon>
     </a>
 
